--- a/src/main/webapp/resources/css/kendoui.css
+++ b/src/main/webapp/resources/css/kendoui.css
@@ -14,10 +14,9 @@
     padding-right: 0;
 }
 .k-tabstrip>.k-content{
-    width: auto;
-    height: auto;
-    /*position: fixed;*/
-    border: none;
+    width: 100%;
+    height: 90%;
+    position: fixed;
     margin: 0;
     padding: 0;
 }
@@ -58,7 +57,7 @@
     /* IE 10 */
     background: -ms-linear-gradient(top, #953636, #4c1b1b);
     /* IE < 10 */
-    FILTER: progid:DXImageTransform.Microsoft.Gradient(startColorStr=#953636, endColorStr=#f5f7f8);
+    filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr=#953636, endColorStr=#f5f7f8);
 }
 .k-tabstrip-items .k-item span button{
     color: #f5f7f8;
