--- a/src/main/webapp/resources/css/parts.css
+++ b/src/main/webapp/resources/css/parts.css
@@ -11,3 +11,118 @@ ul{
     display: inline;
 }
 
+.table-margin{
+    margin:10px;
+}
+
+.page-nav {
+    margin-top: -5px;
+    float: left;
+}
+
+.page-go {
+    left: 15px;
+    margin-top: -5px;
+}
+
+.page-rows {
+    margin-top: -5px;
+}
+
+.page-up-down {
+    margin-top: -34px;
+    float: right;
+    margin-right: 20px;
+}
+
+#film-add-form {
+    margin-top: 20px;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.form-div {
+    margin-top: 155px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.form-width {
+    width: 104px;
+}
+
+#div-center {
+    width: 560px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#film-add-form div {
+    margin-bottom: 10px;
+}
+
+#film-submit {
+    margin-left: 90px;
+    margin-right: 112px;
+}
+
+#last-page {
+    float: left;
+    margin-top: -28px;
+    margin-left: 130px;
+}
+
+.disabled {
+    pointer-events: none;
+}
+
+
+/*kendoui更改后的样式*/
+.parts-tab {
+    background-color: #ffffff;
+}
+.parts-tab .k-header{
+    background-image: none;
+    border: none;
+    height: 40px;
+    font-size: 15px;
+}
+.parts-tab .k-tabstrip-items{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.parts-tab .k-content{
+    width: auto;
+    height: auto;
+
+}
+/*.k-tabstrip-items .k-link{*/
+/*padding-right: 0;*/
+/*}*/
+
+.parts-tab .k-tabstrip-items .k-state-active{
+    background: #fff;
+}
+.parts-tab .k-tabstrip-items .k-state-active span{
+    color: #6a8dff;
+}
+.parts-tab .k-tabstrip-items .k-item{
+    background-image: none;
+    /* Webkit: Safari 4-5, Chrome 1-9 */
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffffff), to(#ffffff));
+    /* Webkit: Safari 5.1+, Chrome 10+ */
+    background: -webkit-linear-gradient(top, #ffffff, #ffffff);
+    /* Firefox 3.6+ */
+    background: -moz-linear-gradient(top, #ffffff, #ffffff);
+    /* Opera 11.10+ */
+    background: -o-linear-gradient(top, #ffffff, #ffffff);
+    /* IE 10 */
+    background: -ms-linear-gradient(top, #ffffff, #ffffff);
+    /* IE < 10 */
+    filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr=#ffffff, endColorStr=#ffffff);
+}
+
+.parts-tab .k-tabstrip-items .k-state-default .k-link{
+    color: #2e2e2e;
+}
