--- a/src/main/webapp/resources/css/parts.css
+++ b/src/main/webapp/resources/css/parts.css
@@ -11,73 +11,6 @@ ul{
     display: inline;
 }
 
-.table-margin{
-    margin:10px;
-}
-
-.page-nav {
-    margin-top: -5px;
-    float: left;
-}
-
-.page-go {
-    left: 15px;
-    margin-top: -5px;
-}
-
-.page-rows {
-    margin-top: -5px;
-}
-
-.page-up-down {
-    margin-top: -34px;
-    float: right;
-    margin-right: 20px;
-}
-
-#film-add-form {
-    margin-top: 20px;
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.form-div {
-    margin-top: 155px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.form-width {
-    width: 104px;
-}
-
-#div-center {
-    width: 560px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#film-add-form div {
-    margin-bottom: 10px;
-}
-
-#film-submit {
-    margin-left: 90px;
-    margin-right: 112px;
-}
-
-#last-page {
-    float: left;
-    margin-top: -28px;
-    margin-left: 130px;
-}
-
-.disabled {
-    pointer-events: none;
-}
-
-
 /*kendoui更改后的样式*/
 .parts-tab {
     background-color: #ffffff;
@@ -93,9 +26,11 @@ ul{
     padding-right: 20px;
 }
 .parts-tab .k-content{
-    width: auto;
-    height: auto;
-
+    width: 98%;
+    height: 77%;
+    position: fixed;
+    margin-left: 10px;
+    margin-right:10px;
 }
 /*.k-tabstrip-items .k-link{*/
 /*padding-right: 0;*/
