--- a/src/main/webapp/resources/css/dataGrid.css
+++ b/src/main/webapp/resources/css/dataGrid.css
@@ -1,33 +1,90 @@
-.data-grid{
-    position: relative;
-    height: 100%;
+.grid-toolbar{
+    width: calc(100% - 26px);
+    height: 35px;
+    position: absolute;
+    top: 1px;
+    padding-left: 5px;
+    padding-top: 5px;
+    border-right: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    margin: 5px 10px 0 10px;
 }
-.data-grid-footer{
+.grid-toolbar button{
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+.grid-header{
+    width: calc(100% - 37px);
+    position: absolute;
+    margin: 5px 10px 0 10px;
+}
+.grid-header-normal{
+    top: 1px;
+}
+.grid-header-toolbar{
+    top: 41px;
+}
+.grid-header table{
+    margin: 0;
+}
+.grid-fill{
+    position: absolute;
+    right: 10px;
+    width: 20px;
+    height: 31px;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    background: #f5f5f5;
+}
+.grid-fill-normal{
+    top: 6px;
+}
+.grid-fill-toolbar{
+    top: 46px;
+}
+.grid-content{
+    width: calc(100% - 20px);
+    position: absolute;
+    overflow-y: scroll;
+}
+.grid-content-normal{
+    margin: 39px 10px 0 10px;
+    height: calc(100% - 89px);
+}
+.grid-content-toolbar{
+    margin: 79px 10px 0 10px;
+    height: calc(100% - 129px);
+}
+.grid-footer{
     background: #ffffff;
     position: absolute;
     bottom: 1px;
     padding-top: 5px;
     border: 1px solid #eae8e8;
-}
-.grid-table{
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-    margin-bottom: 34px;
-}
-.grid-tbody{
-    position: absolute;
-}
-
-.table-margin {
-    margin: 10px;
+    margin: 0 10px 5px 10px;
 }
 .page-rows,.page-nav,.page-go{
     float: left;
 }
+
+/*.angle-left,.double-left,.angle-right,.double-right{*/
+    /*font-size: 15px;*/
+/*}*/
+/*.angle-right{*/
+    /*font-size: 14px;*/
+/*}*/
+.grid-page{
+    right: 50px;
+    bottom: 12px;
+    text-align: center;
+    position: absolute;
+    font-size: 15px;
+}
 .refresh-grid{
     right: 5px;
-    bottom: 1px;
+    bottom: 3px;
     text-align: center;
     position: absolute;
     font-size: 16px;
