--- a/src/main/webapp/resources/css/kendoui.css
+++ b/src/main/webapp/resources/css/kendoui.css
@@ -6,7 +6,6 @@
 .k-header{
     background-image: none;
     border: none;
-    height: 40px;
     font-size: 15px;
 }
 .k-tabstrip-items{
@@ -15,7 +14,7 @@
 }
 .k-tabstrip>.k-content{
     width: 100%;
-    height: 90%;
+    height: calc(100% - 42px);
     position: fixed;
     margin: 0;
     padding: 0;
