--- a/src/main/webapp/resources/css/dataGrid.css
+++ b/src/main/webapp/resources/css/dataGrid.css
@@ -1,161 +1,174 @@
-.grid-toolbar{
-    width: calc(100% - 26px);
-    height: 35px;
+.grid-toolbar {
+    width: calc(100% - 22px);
+    height: 40px;
     position: absolute;
     top: 1px;
-    padding-left: 5px;
     padding-top: 5px;
     border-right: 1px solid #ddd;
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
-    margin: 5px 10px 0 10px;
+    margin: 5px 12px 0 10px;
 }
-.grid-toolbar button{
+
+.grid-toolbar button {
     padding-top: 3px;
     padding-bottom: 3px;
 }
-.grid-header{
-    width: calc(100% - 37px);
+
+.grid-toolbar:first-child button {
+    margin-left: 5px;
+}
+
+.grid-header {
+    width: calc(100% - 20px);
     position: absolute;
     margin: 5px 10px 0 10px;
 }
-.grid-header-normal{
+
+.grid-header-normal {
     top: 1px;
 }
-.grid-header-toolbar{
+
+.grid-header-toolbar {
     top: 41px;
 }
-.grid-header table{
+
+.grid-header table, .grid-content table {
     margin: 0;
 }
-.grid-fill{
-    position: absolute;
-    right: 10px;
-    width: 20px;
-    height: 31px;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-    background: #f5f5f5;
+
+.all-select input, .one-select input {
+    margin: 0 3px 0 4px;
 }
-.grid-fill-normal{
-    top: 6px;
-}
-.grid-fill-toolbar{
-    top: 46px;
-}
-.grid-content{
+
+.grid-content {
     width: calc(100% - 20px);
     position: absolute;
-    overflow-y: scroll;
 }
-.grid-content-normal{
+.grid-content td{
+    position: relative;
+}
+.grid-input .form-control:first-child{
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.grid-new-tag{
+    width:0;
+    height:0;
+    top: 1px;
+    left: -1px;
+    border-width:0 4px 4px;
+    border-style:solid;
+    border-color:transparent transparent #d90404;/*透明 透明  灰*/
+    transform: rotate(-45deg);
+    position:absolute;
+}
+.grid-content-normal {
     margin: 39px 10px 0 10px;
     height: calc(100% - 89px);
 }
-.grid-content-toolbar{
+
+.grid-content-toolbar {
     margin: 79px 10px 0 10px;
     height: calc(100% - 129px);
 }
-.grid-footer{
+
+.grid-footer {
     background: #ffffff;
     position: absolute;
     bottom: 1px;
-    padding-top: 5px;
+    padding: 5px 0;
     border: 1px solid #eae8e8;
     margin: 0 10px 5px 10px;
 }
-.page-rows,.page-nav,.page-go{
+.grid-nav-container{
+    margin-left: 75px;
+    margin-right: 5px;
+}
+.page-rows, .page-nav, .page-go,.grid-nav-container {
     float: left;
 }
 
-/*.angle-left,.double-left,.angle-right,.double-right{*/
-    /*font-size: 15px;*/
-/*}*/
-/*.angle-right{*/
-    /*font-size: 14px;*/
-/*}*/
-.grid-page{
+.grid-page {
     right: 50px;
     bottom: 12px;
     text-align: center;
     position: absolute;
     font-size: 15px;
 }
-.refresh-grid{
+
+.refresh-grid {
     right: 5px;
     bottom: 3px;
     text-align: center;
     position: absolute;
     font-size: 16px;
 }
-/*.refresh-grid a:hover{*/
-    /*color: #4b4b4b;*/
-/*}*/
-.page-rows{
-    position: absolute;
+
+.page-rows {
     width: auto;
-    margin-left: 10px;
+    position: absolute;
+    margin-left: 5px;
 }
-.page-nav{
-    margin-left: 80px;
-    margin-right: 6px;
+
+.grid-nav {
+    width: 175px;
+    overflow: hidden;
 }
-.page-nav ul{
+
+.grid-nav-ul {
+    width: 6000px;
+    padding: 0;
     margin: 0;
+    list-style: none;
 }
-/*}*/
-/*.page-rows{*/
-    /*float: left;*/
-/*}*/
-/*.page-nav {*/
-    /*float: left;*/
-/*}*/
 
-/*.page-up-down {*/
-    /*margin-top: -34px;*/
-    /*float: right;*/
-    /*margin-right: 20px;*/
-/*}*/
+.grid-nav-ul li {
+    color: #333;
+    background-color: #ffffff;
+    width: 34px;
+    height: 32px;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    float: left;
+    text-align: center;
+    line-height: 33px;
+    font-size: 15px;
+    cursor: pointer
+}
 
-/*#film-add-form {*/
-    /*margin-top: 20px;*/
-    /*width: 400px;*/
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-/*}*/
+.grid-nav-ul li.active {
+    z-index: 3;
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #337ab7;
+}
 
-/*.form-div {*/
-    /*margin-top: 155px;*/
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-/*}*/
+.pagination > li:first-child > a {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
 
-/*.form-width {*/
-    /*width: 104px;*/
-/*}*/
+.pagination > li:last-child > a {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
 
-/*#div-center {*/
-    /*width: 560px;*/
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-/*}*/
+.btn-grid-nav {
+    color: #333;
+    background-color: #fff;
+    border-color: #ddd;
+}
+.btn-grid-left{
+    margin-right: 1px;
+}
+.btn-grid-nav:hover{
+    background-color: #e6e6e6;
+    border-color: #adadad;
+}
+.btn-grid-angle {
+    width: 8px;
+}
 
-/*#film-add-form div {*/
-    /*margin-bottom: 10px;*/
-/*}*/
 
-/*#film-submit {*/
-    /*margin-left: 90px;*/
-    /*margin-right: 112px;*/
-/*}*/
-
-/*#last-page {*/
-    /*float: left;*/
-    /*margin-top: -28px;*/
-    /*margin-left: 130px;*/
-/*}*/
-
-/*.disabled {*/
-    /*pointer-events: none;*/
-/*}*/
