--- a/src/main/webapp/resources/css/dataGrid.css
+++ b/src/main/webapp/resources/css/dataGrid.css
@@ -48,6 +48,11 @@
 .grid-content td{
     position: relative;
 }
+.grid-content td div:first-child{
+    width:100%;
+}
+
+
 .grid-input .form-control:first-child{
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -85,7 +90,7 @@
     margin-left: 75px;
     margin-right: 5px;
 }
-.page-rows, .page-nav, .page-go,.grid-nav-container {
+.page-size, .page-nav, .page-go,.grid-nav-container {
     float: left;
 }
 
@@ -105,7 +110,7 @@
     font-size: 16px;
 }
 
-.page-rows {
+.page-size {
     width: auto;
     position: absolute;
     margin-left: 5px;
