--- a/src/main/webapp/resources/css/dataGrid.css
+++ b/src/main/webapp/resources/css/dataGrid.css
@@ -1,13 +1,11 @@
 .grid-toolbar {
-    width: calc(100% - 22px);
+    width: 100%;
     height: 40px;
-    position: absolute;
-    top: 1px;
     padding-top: 5px;
     border-right: 1px solid #ddd;
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
-    margin: 5px 12px 0 10px;
+    box-sizing: border-box;
 }
 
 .grid-toolbar button {
@@ -20,17 +18,7 @@
 }
 
 .grid-header {
-    width: calc(100% - 20px);
-    position: absolute;
-    margin: 5px 10px 0 10px;
-}
-
-.grid-header-normal {
-    top: 1px;
-}
-
-.grid-header-toolbar {
-    top: 41px;
+    width: 100%;
 }
 
 .grid-header table, .grid-content table {
@@ -42,8 +30,15 @@
 }
 
 .grid-content {
-    width: calc(100% - 20px);
+    height: auto;
+    width: 100%;
     position: absolute;
+    bottom: 49px;
+    left: 0;
+    top: 78px;
+    right: 0;
+    padding: 0 10px;
+    box-sizing: border-box;
 }
 .grid-content td{
     position: relative;
@@ -51,7 +46,6 @@
 .grid-content td div:first-child{
     width:100%;
 }
-
 
 .grid-input .form-control:first-child{
     border-top-right-radius: 4px;
@@ -68,23 +62,16 @@
     transform: rotate(-45deg);
     position:absolute;
 }
-.grid-content-normal {
-    margin: 39px 10px 0 10px;
-    height: calc(100% - 89px);
-}
-
-.grid-content-toolbar {
-    margin: 79px 10px 0 10px;
-    height: calc(100% - 129px);
-}
 
 .grid-footer {
     background: #ffffff;
     position: absolute;
-    bottom: 1px;
+    bottom: 3px;
+    left: 10px;
+    right: 10px;
     padding: 5px 0;
     border: 1px solid #eae8e8;
-    margin: 0 10px 5px 10px;
+    box-sizing: border-box;
 }
 .grid-nav-container{
     margin-left: 75px;
