--- a/src/main/webapp/resources/css/kendoui.css
+++ b/src/main/webapp/resources/css/kendoui.css
@@ -1,7 +1,13 @@
-
+.k-tabstrip-wrapper{
+    width: 100%;
+    height: 100%;
+}
 /*kendoui更改后的样式*/
 .k-tabstrip{
     background-color: #4c1b1b;
+    width: 100%;
+    height: 100%;
+
 }
 .k-header{
     background-image: none;
@@ -14,10 +20,30 @@
 }
 .k-tabstrip>.k-content{
     width: 100%;
-    height: calc(100% - 42px);
-    position: fixed;
+    height: auto;
+    position: absolute;
+    top:41px;
+    bottom: 0;
+    left: 0;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    -moz-transform: translate(0,0);
+    -webkit-transform: translate(0,0);
+    -o-transform: translate(0,0);
+    -ms-transform:translate(0,0);
+    transform:translate(0,0);
+
+    /* IE8+ - must be on one line, unfortunately */
+    -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0, M21=0, M22=1, SizingMethod='auto expand')";
+
+    /* IE6 and 7 */
+    filter: progid:DXImageTransform.Microsoft.Matrix(
+            M11=1,
+            M12=0,
+            M21=0,
+            M22=1,
+            SizingMethod='auto expand');
 }
 /*.k-tabstrip-items .k-link{*/
 /*padding-right: 0;*/
