--- a/src/main/webapp/resources/css/parts.css
+++ b/src/main/webapp/resources/css/parts.css
@@ -71,3 +71,13 @@ ul{
     padding: 0 10px 5px 10px;
     box-sizing: border-box;
 }
+
+.parts-grid{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.parts-grid .grid-content{
+    top:83px;
+}
