--- a/src/main/webapp/resources/css/settlement.css
+++ b/src/main/webapp/resources/css/settlement.css
@@ -1,5 +1,4 @@
 #info-container{
-    position: fixed;
     width: 100%;
     height: 100%;
     padding: 10px;
@@ -19,6 +18,7 @@
     box-shadow: 0 1px 2px 1px rgba(0,0,0,.1), 0 3px 6px rgba(0,0,0,.1);
     position: relative;
     font-size: 15px;
+    box-sizing: border-box;
 }
 #info-settlement-parts{
     width: 59%;
@@ -59,15 +59,17 @@
     border-bottom: none;
 }
 .info-change-name{
-    width: 80%;
+    width: 70%;
     float: left;
     padding-left: 20px;
+    box-sizing: border-box;
 }
 .info-change-price,.info-tp-price{
-    width: 20%;
+    width: 30%;
     float: right;
     text-align: right;
     padding-right: 40px;
+    box-sizing: border-box;
 }
 .price-negative{
     color: #d9534f;
@@ -84,10 +86,11 @@
     left: 0;
 }
 .info-tp-name{
-    width: 80%;
+    width: 70%;
     float: left;
     padding-left: 20px;
     text-align: right;
+    box-sizing: border-box;
 }
 .info-parts-price{
     border-top: 1px solid #cccccc;
@@ -108,4 +111,5 @@
     left: 0;
     top: 40px;
     padding: 0 10px;
+    box-sizing: border-box;
 }
